# StatisticsServer

./: CMakeLists.txt  README.md  build.sh  fifogen.sh
src/: app.cpp  app.h  main.cpp  signal-thread.cpp  signal-thread.h  statistics-db.cpp  statistics-db.h  udp-thread.cpp  udp-thread.h
tools/: udpclient.c
